@@ -1,6 +1,7 @@
 0.017 2024-11-22
   [Incompatible Changes]
     * Move Net::SSLeay::Util::X509#get_ocsp_uri method to Net::SSLeay::X509#P_get_ocsp_uri method.
+    * Move Net::SSLeay::Util#dump_peer_certificate method to Net::SSLeay#P_dump_peer_certificate method.
     
 0.016 2024-11-21
   [New Features]
